Change background color and add header and footer to body

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       type="text/css"
     />
     <link
-      href="http://fonts.googleapis.com/css?family=Montserrat:400,700"
+      href="http://fonts.googleapis.com/css?family=Raleway:400,700"
       rel="stylesheet"
       type="text/css"
     />
@@ -32,28 +32,33 @@
         your experience.
       </p>
     <![endif]-->
-
-    <section class="wrapper">
-      <div class="div-1">
-        Capsule Toys
-        <p>
-          Small toys that come in capsules in machines found in locations like
-          bodegas, supermarkets, and laundromats.
-        </p>
-      </div>
-      <div class="div-2">
-        Lovables
-        <p>Capsule toy line of cute pompom creatures in pastel colors</p>
-      </div>
-      <div class="div-3">
-        Glitter Critters
-        <p>
-          Capsule toys similar to the Lovables, but glittery and in more neon
-          colors
-        </p>
-      </div>
-    </section>
-
+    <header>
+      <h1>Hi. I'm Ari.</h1>
+      <p>I'm a responsive designer and developer who loves problem solving.</p>
+    </header>
+    <main>
+      <section class="wrapper">
+        <div class="div-1">
+          Capsule Toys
+          <p>
+            Small toys that come in capsules in machines found in locations like
+            bodegas, supermarkets, and laundromats.
+          </p>
+        </div>
+        <div class="div-2">
+          Lovables
+          <p>Capsule toy line of cute pompom creatures in pastel colors</p>
+        </div>
+        <div class="div-3">
+          Glitter Critters
+          <p>
+            Capsule toys similar to the Lovables, but glittery and in more neon
+            colors
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer><img src="" alt="Twitter icon" /></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>
       window.jQuery ||
